@@ -13,6 +13,7 @@
 [+] Gestionnaire de médias : affichage des miniatures jpeg
 [+] Gestionnaire de médias : copie lien image dans le presse-papier
 [+] Suppression des doublons dans la saisie des tags des articles
+[+] Gestion de la méthode onUpdate dans les plugins
 [+] #69: plxAdmin:editArticle - ajout du hook plxAdminEditArticleEnd
 [+] #177: Ajout de la protection du lien téléphone (contribution cfdev)
 [+] #191: plxShow:catList - Ajout de la variable #cat_description
